// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Box renders correctly > with backgroundColor prop 1`] = `
<div
  className="box bgPrimaryBackgroundColor"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with border prop 1`] = `
<div
  className="box border"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with borderColor prop 1`] = `
<div
  className="box uiBorderColor"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with children 1`] = `
<div
  className="box"
  data-testid="box"
>
  Child
</div>
`;

exports[`Box renders correctly > with data-testid prop 1`] = `
<div
  className="box"
  data-testid="test-id"
/>
`;

exports[`Box renders correctly > with empty props 1`] = `
<div
  className="box"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with margin prop 1`] = `
<div
  className="box mSmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with marginEnd prop 1`] = `
<div
  className="box meSmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with marginStart prop 1`] = `
<div
  className="box msSmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with marginTop prop 1`] = `
<div
  className="box mtSmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with marginX prop 1`] = `
<div
  className="box mxSmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with marginY prop 1`] = `
<div
  className="box mySmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with padding prop 1`] = `
<div
  className="box pSmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with paddingBottom prop 1`] = `
<div
  className="box pbSmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with paddingEnd prop 1`] = `
<div
  className="box peSmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with paddingStart prop 1`] = `
<div
  className="box psSmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with paddingTop prop 1`] = `
<div
  className="box ptSmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with paddingX prop 1`] = `
<div
  className="box pxSmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with paddingY prop 1`] = `
<div
  className="box pySmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with rounded prop 1`] = `
<div
  className="box roundedSmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with shadow prop 1`] = `
<div
  className="box shadowSmall"
  data-testid="box"
/>
`;

exports[`Box renders correctly > with text prop 1`] = `
<div
  className="box textPrimaryTextColor"
  data-testid="box"
/>
`;
